--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@ body,
         height: 100%;
 }
 
+
 body {
         margin: 0;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -13,7 +14,7 @@ body {
         sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        background-color: aqua ;
+        background-color: rgb(91, 224, 224) ;
 }
 @import './scss//view.scss' ;
 
@@ -24,7 +25,13 @@ code {
 
 
 .block0 {
-        background-color: orange ;
+        background-color: orange;
+        opacity: 0.8 ;
 }
+
+.playingArea {
+        background-color: rgb(112, 212, 196);
+}
+
 
 
