placing on the board (with bug)

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,9 +29,12 @@ code {
         opacity: 0.8 ;
 }
 
-.playingArea {
-        background-color: rgb(112, 212, 196);
+.block1 {
+        background-color: purple;
+        opacity: 0.8 ;
 }
+
+
 
 
 
