--- a/src/scss/board.scss
+++ b/src/scss/board.scss
@@ -58,6 +58,15 @@ $fadedyellow: #BDA259;
     }
   }
 
+  .block0 {
+    background-color: orange;
+    opacity: 0.8 ;
+}
+
+.block1 {
+    background-color: purple;
+    opacity: 0.8 ;
+}
   .tile {
     position: absolute;
     z-index: 2;
